(Again) Made the css change to fix layout issue - http://icarda2.benale.net/content/filedepot-adding-document-repository-feature-open-atrium

--- a/profiles/openatrium/modules/atrium_features/filedepot_feature/filedepot_feature.css
+++ b/profiles/openatrium/modules/atrium_features/filedepot_feature/filedepot_feature.css
@@ -1,9 +1,5 @@
 /* $Id: */
  
-#content { width:99% !important; }
-#right { display:none; }
-  
-  
 #features-menu li a.icon-filedepot span.icon {
 background:url("filecabinet.png") no-repeat scroll 0 0 transparent;
 display:block;
